Fixed header spacing when resized smaller

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -271,6 +271,10 @@ img.preview {
 @media only screen and(max-width: 500px) {
      .nav {
          font-size: 0.7em;
+         top: 0.675em;
+     }
+     .nav-home {
+         top: 4em;
      }
 }
 .selfie {
